# log4cpp-example-of-failing

./: CMakeLists.txt  README.md
log4cpp/: .gitignore
main/: CMakeLists.txt  main.cpp
some-lib/: CMakeLists.txt  some.cpp  some.h
wrapper-log-lib/: CMakeLists.txt  log.cpp  log.h
